--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   "devDependencies": {
     "rollup": "^0.64.1",
     "rollup-plugin-babel-minify": "^5.0.0",
-    "rollup-plugin-buble": "^0.19.2",
-    "rollup-plugin-uglify": "^4.0.0"
+    "rollup-plugin-buble": "^0.19.2"
   },
   "files": [
     "dist"
